# Finales-POO

./: .gitignore  AutorizacionesEmpresa-Composicion-Agregacion.rar  Bonos-HerenciaTotal-TiposNoCambian.rar  ComentariosProductos.rar  EmpresaProductosAlimenticios - Composicion.rar  GreenGoldSoft - Composicion.rar  JerarquicoDeCargos-Composición-Jerarquia.rar  ObraSocial-HerenciaTotal.rar  RESUMEN-TEORIA-PARCIAL.txt  ReciboDeSueldo-Herencia + Composición + Polimorfismo.rar  SistemaArchivosMemoria- Herencia + Composición.rar  SistemaDependencias - Composicion.rar  SistemaDescuento-Herencia-TiposCambian-Composicion.rar
AutorizacionesEmpresa-Composicion-Agregacion/: CMakeLists.txt  cargo.cpp  cargo.h  cargoextendido.cpp  cargoextendido.h  gestora.cpp  gestora.h  usuario.cpp  usuario.h
Bonos-HerenciaTotal-TiposNoCambian/: CMakeLists.txt  empleado.cpp  empleado.h  empleadomuchasventas.cpp  empleadomuchasventas.h  gestora.cpp  gestora.h  jefe.cpp  jefe.h  vendedor.cpp  vendedor.h
ComentariosProductos/: ComentariosProductos.pro  README.md  comentario.cpp  comentario.h  comentarios.txt  gestora.cpp  gestora.h  main.cpp  producto.cpp  producto.h
EmpresaProductosAlimenticios/: README.md  gestora.cpp  gestora.h  ingrediente.cpp  producto.h  productocompuesto.cpp  productocompuesto.h
EmpresaProductosAlimenticios - Composicion/: EmpresaProductosAlimenticios.pro  gestora.cpp  gestora.h  ingrediente.h  main.cpp  producto.cpp  producto.h  productocompuesto.cpp  productocompuesto.h
GreenGoldSoft/: curso.cpp  cursocompuesto.h  main.cpp
GreenGoldSoft - Composicion/: GreenGoldSoft.pro  README.md  curso.h  cursocompuesto.cpp  cursocompuesto.h  gestora.cpp  gestora.h  main.cpp
JerarquicoDeCargos-Composición-Jerarquia/: empleado.cpp  empleado.h  gestora.cpp  gestora.h
JerarquicoDeCargos-Composición-Pura/: CMakeLists.txt  gestora.h
ObraSocial-HerenciaTotal/: ObraSocial.pro  README.md  basica.txt  cliente.cpp  cliente.h  clientebasico.cpp  clientebasico.h  clientemedio.cpp  clientemedio.h  clientepremium.cpp  clientepremium.h  gestora.cpp  gestora.h  main.cpp  medio.txt  premium.txt
ReciboDeSueldo-Herencia + Composición + Polimorfismo/: CMakeLists.txt  ReciboDeSueldo.pro  antiguedad.cpp  antiguedad.h  empleado.cpp  empleado.h  empleadoacargo.cpp  empleadoacargo.h  gestora.cpp  gestora.h  item.cpp  item.h  main.cpp  monto.cpp  monto.h
SistemaArchivosMemoria/: archivo.cpp  archivo.h  carpeta.cpp  carpeta.h  gestora.cpp  main.cpp  nodo.cpp  nodo.h
SistemaArchivosMemoria- Herencia + Composición/: README.md  SistemaArchivosMemoria.pro  archivo.cpp  archivo.h  carpeta.h  gestora.cpp  gestora.h  main.cpp  nodo.h
SistemaDependencias/: README.md  conjuntopaquetes.h  main.cpp  paquete.h
SistemaDependencias - Composicion/: SistemaDependencias.pro  conjuntopaquetes.cpp  conjuntopaquetes.h  gestora.cpp  gestora.h  main.cpp  paquete.cpp  vectorordenado.h
SistemaDescuento-Herencia-TiposCambian-Composicion/: CMakeLists.txt  SistemaDescuento.pro  cliente.cpp  cliente.h  descuento.cpp  descuento.h  descuentoa.cpp  descuentoa.h  descuentob.cpp  descuentob.h  descuentoc.cpp  descuentoc.h  gestora.cpp  gestora.h  main.cpp  venta.cpp  venta.h
Tareas-Herencia-Total/: CMakeLists.txt  archivotxt.cpp  archivotxt.h  gestora.cpp  gestora.h  gestorasinejerciciolibre.cpp  gestorasinejerciciolibre.h  main.cpp  muchatarea.cpp  muchatarea.h  normal.cpp  normal.h  repetitiva.cpp  repetitiva.h  tarea.cpp  tarea.h  tareas.cpp  tareas.h
(+11 files in other folders)
